# voice-layer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
.claude/: settings.json
.claude/skills/daemon-run/: SKILL.md
.claude/skills/feature-gate/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
crates/vl/: Cargo.toml
crates/vl-desktop/: Cargo.toml
crates/vl-desktop/src/: daemon_client.rs  main.rs  overlay.rs  portal.rs
crates/vl/src/: cli.rs  config.rs  foreground_ptt.rs  main.rs  preview.rs  terminal_targets.rs  uds.rs
crates/voicelayer-core/: Cargo.toml
crates/voicelayer-core/src/: domain.rs  injection.rs  lib.rs  provider.rs
crates/voicelayer-doc-test-utils/: Cargo.toml
crates/voicelayer-doc-test-utils/src/: lib.rs
crates/voicelayerd/: Cargo.toml
crates/voicelayerd/src/: hotkeys.rs  lib.rs  main.rs  recording.rs  segmented_recording.rs  worker.rs
crates/voicelayerd/tests/fixtures/: mock_worker.py
docs/architecture/: host-injection-strategy.md  overview.md  python-worker-protocol.md
docs/guides/: desktop.md  development.md  local-asr-provider.md  local-llm-provider.md  systemd.md
openapi/: voicelayerd.v1.yaml
python/voicelayer_orchestrator/: __init__.py  config.py  protocol.py  worker.py
python/voicelayer_orchestrator/providers/: __init__.py  audio_stitch.py  llama_autostart.py  llm_openai_compatible.py  mimo_asr.py  vad_segmenter.py  whisper_cli.py  whisper_server.py
scripts/: benchmark-whisper-cold-start-docker.sh  benchmark-whisper-cold-start.sh  benchmark-whisper-warm-server.sh  generate_silent_fixture.py  install.sh  voicelayer-whisper-server-run.sh
systemd/: voicelayer-whisper-server.service  voicelayerd.env.example  voicelayerd.service
tests/python/: test_audio_stitch.py  test_env_example.py  test_mimo_asr.py  test_providers.py  test_vad.py  test_whisper_server_launch.py  test_worker.py
