[workspace]
members = [
  "crates/voicelayer-core",
  "crates/voicelayerd",
  "crates/vl",
  "crates/vl-desktop",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
arboard = "3.6.1"
axum = { version = "0.8.6", features = ["http1", "json", "macros"] }
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive", "env"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.22.0"
thiserror = "2.0.17"
toml = "1.0.4"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zbus = { version = "5.14.0", default-features = true }
