[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "voicelayer-orchestrator"
version = "0.1.0"
description = "Python workers for VoiceLayer model orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
vad = [
    "numpy>=2.0",
    "onnxruntime>=1.18",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.15.11",
]

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["python"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
