[package]
name = "vl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arboard.workspace = true
bytes.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
uuid.workspace = true
voicelayer-core = { path = "../voicelayer-core" }
voicelayerd = { path = "../voicelayerd" }

[dev-dependencies]
tempfile.workspace = true
