[package]
name = "voicelayerd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
voicelayer-core = { path = "../voicelayer-core" }
zbus.workspace = true
